Fix persistence module dependencies and enhance JDBC repository robustness.
- Correct package names in net-persistent module.
- Remove core module dependency.
- Improve JdbcRepository insert logic.
- Update AOP pointcut for CGLIB proxies.
- Add unit tests.